<resources>
    <string name="app_name">Калькулятор</string>
    <string name="button_zero_text">0</string>
    <string name="button_one_text">1</string>
    <string name="button_two_text">2</string>
    <string name="button_three_text">3</string>
    <string name="button_four_text">4</string>
    <string name="button_five_text">5</string>
    <string name="button_six_text">6</string>
    <string name="button_seven_text">7</string>
    <string name="button_eight_text">8</string>
    <string name="button_nine_text">9</string>
    <string name="button_dot_text">.</string>
    <string name="button_plus_text">+</string>
    <string name="button_reset_text">C</string>
    <string name="button_invert_text">(-)</string>
    <string name="button_minus_text">-</string>
    <string name="button_multiply_text">*</string>
    <string name="button_divide_text">/</string>
    <string name="button_equal_text">=</string>
    <string name="display_text" />
    <string name="button_put_in_memory_text">M+</string>
    <string name="button_get_from_memory_text">MR</string>
    <string name="error_result">ОШИБКА!</string>
</resources>