<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gray_plastic">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:background="@color/screen_border_color">

        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="@dimen/screen_height"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="5sp"
            android:layout_marginRight="5sp"
            android:layout_marginBottom="5sp"
            android:background="#DFF3C9"
            android:text="@string/display_text"
            android:textAlignment="textEnd"
            android:textSize="@dimen/display_text_size"

            />
    </FrameLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:background="@drawable/button_square_grey"
            android:text="@string/button_reset_text"
            android:textSize="@dimen/button_text_size" />
        <Button
            android:id="@+id/button_invert"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:background="@drawable/button_square_grey"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_invert_text" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_blue"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_plus_text" />
        <Button
            android:id="@+id/button_seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_grey"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_seven_text" />

        <Button
            android:id="@+id/button_eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_grey"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_eight_text" />

        <Button
            android:id="@+id/button_nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_grey"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_nine_text" />

        <Button
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_blue"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_minus_text" />

        <Button
            android:id="@+id/button_four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_grey"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_four_text" />

        <Button
            android:id="@+id/button_five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_grey"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_five_text" />

        <Button
            android:id="@+id/button_six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_grey"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_six_text" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_blue"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_multiply_text" />

        <Button
            android:id="@+id/button_one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_grey"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_one_text" />

        <Button
            android:id="@+id/button_two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_grey"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_two_text" />

        <Button
            android:id="@+id/button_three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_grey"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_three_text" />

        <Button
            android:id="@+id/button_divide"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_blue"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_divide_text" />

        <Button
            android:id="@+id/button_zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_grey"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_zero_text" />

        <Button
            android:id="@+id/button_dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_square_grey"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_dot_text" />

        <Button
            android:id="@+id/button_equal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_margin="2sp"
            android:background="@drawable/button_rectangle"
            android:textAlignment="gravity"
            android:gravity="center"
            android:textColor="@color/button_text_color"
            android:layout_columnSpan="2"
            android:textSize="@dimen/button_text_size"
            android:text="@string/button_equal_text" />




    </GridLayout>
</LinearLayout>
